--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -34,16 +34,16 @@
                 <li><a href="#4-entendendo-o-score-final">4. Score Final</a></li>
                 <li><a href="#5-metricas-principais-explicacao-tecnica">5. Métricas Principais</a></li>
                 <li><a href="#6-analise-de-frequencias">6. Análise de Frequências</a></li>
-                <li><a href="#7-comparacao-com-referencia-de-genero">7. Comparação com Referência</a></li>
-                <li><a href="#7a-analise-de-referencia-a-ferramenta-mais-poderosa">7A. Análise de Referência ⭐ (IMPORTANTE)</a></li>
-                <li><a href="#7b-chatbot-de-ia-seu-engenheiro-de-audio-virtual">7B. Chatbot de IA 🤖</a></li>
-                <li><a href="#7c-pedir-ajuda-a-ia-feature-integrada">7C. Pedir Ajuda à IA</a></li>
-                <li><a href="#8-sugestoes-inteligentes-e-plano-de-correcao">8. Sugestões e Plano de Correção</a></li>
-                <li><a href="#9-plano-de-correcao-funcionalidade-pro">9. Plano de Correção (PRO)</a></li>
-                <li><a href="#10-relatorio-em-pdf">10. Relatório PDF</a></li>
-                <li><a href="#11-boas-praticas">11. Boas Práticas</a></li>
-                <li><a href="#12-limitacoes-da-ferramenta">12. Limitações</a></li>
-                <li><a href="#13-como-fornecer-feedback">13. Como fornecer feedback</a></li>
+                <li><a href="#7-comparacao-com-referencia-de-genero">7. Comparação com Referência de Gênero</a></li>
+                <li><a href="#8-analise-de-referencia-a-ferramenta-mais-poderosa">8. Análise de Referência ⭐ (IMPORTANTE)</a></li>
+                <li><a href="#9-chatbot-de-ia-seu-engenheiro-de-audio-virtual">9. Chatbot de IA 🤖</a></li>
+                <li><a href="#10-pedir-ajuda-a-ia-feature-integrada">10. Pedir Ajuda à IA</a></li>
+                <li><a href="#11-sugestoes-inteligentes-e-plano-de-correcao">11. Sugestões e Plano de Correção</a></li>
+                <li><a href="#12-plano-de-correcao-funcionalidade-pro">12. Plano de Correção (PRO)</a></li>
+                <li><a href="#13-relatorio-em-pdf">13. Relatório PDF</a></li>
+                <li><a href="#14-boas-praticas">14. Boas Práticas</a></li>
+                <li><a href="#15-limitacoes-da-ferramenta">15. Limitações</a></li>
+                <li><a href="#16-como-fornecer-feedback">16. Como fornecer feedback</a></li>
                 <li><a href="#glossario-tecnico">Glossário Técnico</a></li>
             </ul>
         </nav>
