--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -35,8 +35,8 @@
                 <li><a href="#5-metricas-principais-explicacao-tecnica">5. Métricas Principais</a></li>
                 <li><a href="#6-analise-de-frequencias">6. Análise de Frequências</a></li>
                 <li><a href="#7-comparacao-com-referencia-de-genero">7. Comparação com Referência de Gênero</a></li>
-                <li><a href="#8-analise-de-referencia-a-ferramenta-mais-poderosa">8. Análise de Referência ⭐ (IMPORTANTE)</a></li>
-                <li><a href="#9-chatbot-de-ia-seu-engenheiro-de-audio-virtual">9. Chatbot de IA 🤖</a></li>
+                <li><a href="#8-analise-de-referencia-a-ferramenta-mais-poderosa">8. Análise de Referência</a></li>
+                <li><a href="#9-chatbot-de-ia-seu-engenheiro-de-audio-virtual">9. Chatbot de IA</a></li>
                 <li><a href="#10-pedir-ajuda-a-ia-feature-integrada">10. Pedir Ajuda à IA</a></li>
                 <li><a href="#11-sugestoes-inteligentes-e-plano-de-correcao">11. Sugestões e Plano de Correção</a></li>
                 <li><a href="#12-plano-de-correcao-funcionalidade-pro">12. Plano de Correção (PRO)</a></li>
