--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -199,7 +199,7 @@
             </h3>
             <p class="support-footer-text">Precisa de ajuda? Entre em contato conosco:</p>
             <div class="support-footer-contact">
-                <span class="support-email">prod.ai@gmail.com</span>
+                <span class="support-email">soundyaibr@gmail.com</span>
             </div>
             <div class="support-footer-info">
                 <div class="support-footer-item">
@@ -208,7 +208,7 @@
                 </div>
                 <div class="support-footer-item">
                     <span class="support-item-icon">💬</span>
-                    <span>Chat online: 24/7</span>
+                    <span>Chat online: 24h</span>
                 </div>
                 <div class="support-footer-item">
                     <span class="support-item-icon">⚡</span>
