--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <title>Documento Técnico - SoundyAI</title>
-    <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260104-v2">
+    <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260104-v3">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
     
     <!-- 🛡️ PROTEÇÃO: Prevenir scripts da index de serem executados -->
@@ -59,6 +59,6 @@
         </footer>
     </div>
 
-    <script src="documento-tecnico-loader.js?v=20260104-v2"></script>
+    <script src="documento-tecnico-loader.js?v=20260104-v3"></script>
 </body>
 </html>
