--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documento Técnico - SoundyAI</title>
-    <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260105-stable">
+    
+    <!-- CSS EXTERNO ÚNICO - SEM INLINE STYLES PROBLEMÁTICOS -->
+    <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260105-audit-fix">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
+    
+    <script>
+        // Marcar página como documento técnico
+        window.IS_DOCUMENTATION_PAGE = true;
+    </script>
 </head>
 <body class="page-doc">
     <div class="doc-container">
@@ -14,7 +21,7 @@
             <p class="doc-subtitle">Guia completo de uso da plataforma SoundyAI</p>
             <div class="doc-meta">
                 <span><strong>Versão:</strong> 1.0</span>
-                <span><strong>Atualizado em:</strong> 04 de janeiro de 2026</span>
+                <span><strong>Atualizado em:</strong> 05 de janeiro de 2026</span>
             </div>
         </header>
 
@@ -52,6 +59,6 @@
         </footer>
     </div>
 
-    <script src="documento-tecnico-loader.js?v=20260105-stable"></script>
+    <script src="documento-tecnico-loader.js?v=20260105-audit-fix"></script>
 </body>
 </html>
