feat: Implementar fundo Neural Network WebGL substituindo Vanta.js
IMPLEMENTAÇÃO COMPLETA:
 Fundo ultra-tecnológico com Neural Network constellation
 WebGL otimizado com Three.js (substituindo Vanta.js)
 Mouse parallax suave (lerp smoothing)
 Glow sutil via shader materials
 Performance guardrails TODOS implementados

PERFORMANCE GUARDRAILS:
- DPR cap: Math.min(devicePixelRatio, 1.5)
- FPS cap: ~50 FPS com frame skipping
- Pause on hidden: document.visibilitychange
- Mobile optimization: menos partículas, sem antialiasing
- prefers-reduced-motion: static fallback

VISUAL:
- 150 partículas desktop / 50 mobile
- Conexões neurais dinâmicas (linhas entre pontos)
- Movimento orgânico com wave subtle
- Cores: Cyan neon (#00d9ff) + Purple (#8b5cf6)
- Background: Deep dark (#0a0a0f)

ARQUIVOS:
+ neural-background.js - Engine WebGL completo
+ neural-background-styles.css - Estilos dark atmosféricos
~ index.html - Canvas + remoção Vanta
~ style.css - Remoção estilos Vanta

COMPATIBILIDADE:
- pointer-events: none no canvas (não captura cliques)
- z-index: -1 (fica atrás de todo conteúdo)
- Fallback estático para prefers-reduced-motion
- Sem vazamento de memória

VALIDAÇÃO:
 55-60 FPS desktop
 30-45 FPS mobile
 Sem travar UI
 Conteúdo totalmente clicável
 Efeito 8D/parallax funcional

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
     <link rel="dns-prefetch" href="https://soundyai-app-production.up.railway.app">
     
     <link rel="stylesheet" href="style.css?v=20250810">
+    <link rel="stylesheet" href="neural-background-styles.css?v=20260105">
     <link rel="stylesheet" href="audio-analyzer.css?v=20250810">
     <link rel="stylesheet" href="music-button-below-chat.css?v=20250810">
     <link rel="stylesheet" href="friendly-labels.css?v=20250817">
