--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -6,7 +6,7 @@
     <title>Documento Técnico - SoundyAI</title>
     
     <!-- CSS EXTERNO ÚNICO - SEM INLINE STYLES PROBLEMÁTICOS -->
-    <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260105-audit-fix">
+    <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260105-list-fix">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
     
     <script>
@@ -59,6 +59,6 @@
         </footer>
     </div>
 
-    <script src="documento-tecnico-loader.js?v=20260105-audit-fix"></script>
+    <script src="documento-tecnico-loader.js?v=20260105-list-fix"></script>
 </body>
 </html>
