--- a/public/landing.html
+++ b/public/landing.html
@@ -1431,8 +1431,8 @@
         <div class="sound-wave-bg"></div>
         <div class="hero-container">
             <div class="hero-content">
-                <h1>ANALISE SUA MIX E MASTER EM 1 MINUTO    <br><span>SAIBA O QUE CORRIGIR E COMO</span></h1>
-                <p>O SoundyAI revela os erros invisíveis de LUFS, True Peak e Frequências que seus ouvidos (e seus fones) deixam passar.</p>
+                <h1>ANALISE SUA MÚSICA EM 1 MINUTO    <br><span>SAIBA O QUE CORRIGIR E COMO</span></h1>
+                <p>SoundyAI revela todos erros invisíveis da sua faixa e todos problemas que seus ouvidos e seus fones deixam passar.</p>
                 
                 <div class="hero-ctas">
                     <a href="index.html" class="btn-primary">Analisar minha música grátis</a>
@@ -1464,7 +1464,7 @@
     <div class="frequency-separator"></div>
     <section id="problem" class="section">
         <h2 class="section-title">O PROBLEMA INVISÍVEL</h2>
-        <p class="section-subtitle">Soar bem no seu quarto não significa estar pronto para o mundo. O Spotify, o carro e o PA vão revelar o que você não ouviu.</p>
+        <p class="section-subtitle">Soar bem no seu quarto não significa estar pronto para o mundo. O Spotify, o carro e o sistema de som do evento vão revelar o que você não ouviu.</p>
         
         <div class="problem-grid">
             <div class="problem-card">
@@ -1475,7 +1475,7 @@
             <div class="problem-card">
                 <div class="problem-icon">⚠️</div>
                 <h3>Clipping Invisível</h3>
-                <p>True Peak acima de -1dBTP pode causar distorção digital na conversão para MP3/AAC. Seus meters normais não mostram isso.</p>
+                <p>True Peak acima de -1dBTP pode causar distorção digital na conversão para MP3/AAC. Em sistemas muito altos, esse tipo de distorção pode ficar mais evidente, especialmente quando o áudio e a cadeia de som já estão no limite..</p>
             </div>
             <div class="problem-card">
                 <div class="problem-icon">📉</div>
