--- a/public/index.html
+++ b/public/index.html
@@ -1647,7 +1647,12 @@
                             if (typeof window.logout === 'function') {
                                 window.logout();
                             } else {
+                                // Preserva o bypass de admin antes de limpar
+                                var adminBypass = localStorage.getItem('soundy_admin_bypass');
                                 localStorage.clear();
+                                if (adminBypass) {
+                                    localStorage.setItem('soundy_admin_bypass', adminBypass);
+                                }
                                 window.location.href = 'login.html';
                             }
                             break;
