aviso sair da pagina

--- a/public/index.html
+++ b/public/index.html
@@ -735,6 +735,17 @@
                 <div class="progress-bar">
                     <div class="progress-fill" id="audioProgressFill"></div>
                 </div>
+                
+                <!-- Aviso importante durante análise -->
+                <div class="audio-analysis-warning">
+                    <div class="warning-icon">⚙️</div>
+                    <div class="warning-content">
+                        <p class="warning-title">Análise em andamento</p>
+                        <p class="warning-text">Para garantir que o processo seja concluído corretamente, mantenha esta página aberta até o fim da análise.</p>
+                        <p class="warning-subtext">Isso normalmente leva apenas alguns instantes.</p>
+                    </div>
+                </div>
+                
                 <p id="audioConnectionHint" class="connection-hint" style="display: none;">
                     <span class="hint-icon">⏳</span>
                     <span class="hint-text">Esta etapa depende da sua conexão com a internet.<br>Se sua internet estiver lenta, o envio pode demorar um pouco mais.</span>
