aviso sair da pagina

--- a/public/index.html
+++ b/public/index.html
@@ -742,8 +742,8 @@
                     <span class="hint-text">Esta etapa depende da sua conexão com a internet.<br>Se sua internet estiver lenta, o envio pode demorar um pouco mais.</span>
                 </p>
                 
-                <!-- Aviso importante durante análise (aparece depois, quando upload termina) -->
-                <div class="audio-analysis-warning" style="display: none;">
+                <!-- Aviso importante durante análise (sempre visível durante loading) -->
+                <div class="audio-analysis-warning">
                     <div class="warning-icon">⚙️</div>
                     <div class="warning-content">
                         <p class="warning-title">Análise em andamento</p>
