aviso sair da pagina

--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -796,8 +796,8 @@
                     <div class="benefit-item">
                         <div class="benefit-icon">🎁</div>
                         <div class="benefit-content">
-                            <h4>Condições Especiais</h4>
-                            <p>Preços exclusivos para early adopters</p>
+                            <h4>Presentes de Boas-vindas 🎁</h4>
+                            <p>Quem entra na lista recebe conteúdos e materiais exclusivos antes do lançamento.</p>
                         </div>
                     </div>
                     <div class="benefit-item">
