--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -692,8 +692,8 @@
             
             <!-- Main Headline -->
             <h1 class="headline fade-in-up">
-                A IA que vai <span class="headline-highlight">revolucionar</span><br>
-                sua produção musical
+                A IA que mostra <span class="headline-highlight">exatamente</span><br>
+                por que sua música ainda não soa profissional
             </h1>
             
             <!-- Breve explicação do produto -->
@@ -766,7 +766,7 @@
                                     id="phone" 
                                     name="phone" 
                                     class="form-input" 
-                                    placeholder="Telefone (opcional)"
+                                    placeholder="Telefone"
                                     autocomplete="tel"
                                 >
                                 <span class="error-message" id="phoneError">Número de telefone inválido</span>
