--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -777,21 +777,25 @@
             
             <!-- Subheadline -->
 <p class="product-brief fade-in-up">
+ <p class="product-brief fade-in-up">
   <span>
-    Deixe seu e-mail abaixo e seja notificado <span class="headline-highlight">primeiro</span>
-    quando abrirmos as vagas para testar o SoundyAI gratuitamente.
+    Garanta seu lugar na lista e seja um dos
+    <span class="headline-highlight">primeiros</span>
+    a testar a SoundyAI gratuitamente no lançamento.
   </span>
 
   <span>
-    Essa inteligência artificial analisa sua música tecnicamente e mostra
-    <span class="headline-highlight">exatamente</span> o que ajustar na mixagem
-    para alcançar padrão profissional.
+    Essa inteligência artificial analisa o seu áudio e revela
+    <span class="headline-highlight">exatamente</span>
+    o que ajustar na mixagem para alcançar padrão profissional.
   </span>
 
   <span>
     Sem achismos. Sem tentativa e erro.
     Apenas engenharia de áudio aplicada da forma correta.
   </span>
+</p>
+
 
   
 </p>
@@ -834,7 +838,7 @@
             <div class="form-section fade-in-up">
                 <div class="form-card">
                     <div class="form-content" id="formContent">
-                        <h3 class="form-title">Receba um diagnóstico tecníco gratúito do seu áudio por IA</h3>
+                        <h3 class="form-title">Receba diagnóstico tecníco gratúito do seu áudio por IA</h3>
                         <p class="form-subtitle">Preencha o formulário e receba acesso antecipado à ferramenta que vai mostrar exatamente o que está impedindo sua música de soar profissional.</p>
                         
                         <form id="waitlistForm" novalidate>
