targets fynk mandekla

--- a/public/login.html
+++ b/public/login.html
@@ -470,9 +470,9 @@
       <input id="password" type="password" placeholder="Sua senha" autocomplete="current-password" />
     </div>
     <div class="input-group">
-      <input id="phone" type="tel" placeholder="Seu celular (será salvo no perfil)" autocomplete="tel" />
-      <div style="margin-top: 5px; font-size: 12px; color: #888; text-align: center;">
-        💡 <strong>Modo Simplificado:</strong> Cadastro direto sem verificação SMS
+      <input id="phone" type="tel" placeholder="Seu celular (DDD + número)" autocomplete="tel" />
+      <div style="margin-top: 5px; font-size: 12px; color: #fbbf24; text-align: center;">
+        🔒 <strong>Verificação Obrigatória:</strong> Você receberá um código SMS para confirmar
       </div>
     </div>
 
