--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <title>SoundyAI - Mentor Virtual</title>
     
+    <!-- ✅ Sistema Centralizado de Logs - CARREGADO PRIMEIRO -->
+    <script src="logger.js"></script>
+    <script>
+        // Importar funções do logger para escopo global
+        var log = window.logger.log;
+        var warn = window.logger.warn;
+        var error = window.logger.error;
+        var info = window.logger.info;
+        var debug = window.logger.debug;
+    </script>
+    
     <!-- 🚀 PRE-LAUNCH GATE: Sistema de pré-lançamento -->
     <!-- ⚠️ IMPORTANTE: Altere PRE_LAUNCH para false no dia do lançamento (22/01/2026) -->
     <script>
@@ -313,12 +324,6 @@
         // Expor globalmente
         window.handleCorrectionPlanClick = handleCorrectionPlanClick;
         log('[CORRECTION-PLAN] 🌐 handleCorrectionPlanClick exposta no window');
-    </script>
-    <!-- Sistema Centralizado de Logs -->
-    <script src="logger.js"></script>
-    <script>
-        // Importar funções do logger para escopo global
-        const { log, warn, error, info, debug } = window.logger;
     </script>
 </head>
 <body class="page-index">
