--- a/public/audit-v3-runtime-proof.html
+++ b/public/audit-v3-runtime-proof.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🔍 AUDIT: V3 Runtime Proof - True Peak Gate</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body {
