--- a/public/debug-truepeak-frontend.html
+++ b/public/debug-truepeak-frontend.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🔍 Debug True Peak Frontend</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         .result { background: #f0f0f0; padding: 10px; margin: 10px 0; border-radius: 5px; }
