--- a/public/lista.html
+++ b/public/lista.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Espera - SoundyAI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <meta name="description" content="Entre na lista de espera do SoundyAI e garanta seu acesso antecipado à revolução na produção musical.">
     
     <!-- Open Graph / Social -->
