--- a/public/login.html
+++ b/public/login.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SoundyAI – Login</title>
   
+  <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+  <script src="logger.js"></script>
+  
   <!-- Bibliotecas para efeitos visuais (mesmas da landing) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.net.min.js" defer></script>
