--- a/public/primeiro-acesso.html
+++ b/public/primeiro-acesso.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Criar Senha • SoundyAI</title>
   
+  <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+  <script src="logger.js"></script>
+  
   <style>
     * {
       margin: 0;
