--- a/public/privacidade.html
+++ b/public/privacidade.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidade - SoundyAI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <meta name="description" content="Política de Privacidade do SoundyAI conforme a LGPD - Saiba como tratamos seus dados pessoais.">
     <link rel="stylesheet" href="legal.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
