--- a/public/problema-resolvido-final.html
+++ b/public/problema-resolvido-final.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>🔥 PROBLEMA RESOLVIDO DEFINITIVAMENTE</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         body { font-family: monospace; background: #000; color: #0f0; padding: 20px; }
         .result { background: #111; padding: 15px; margin: 10px 0; border: 1px solid #333; }
