--- a/public/suporte.html
+++ b/public/suporte.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suporte - SoundyAI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <meta name="description" content="Central de Suporte do SoundyAI - Entre em contato conosco para dúvidas, problemas técnicos ou solicitações.">
     <link rel="stylesheet" href="legal.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
