--- a/public/termos.html
+++ b/public/termos.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos de Uso - SoundyAI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <meta name="description" content="Termos de Uso da SoundyAI - Plataforma de diagnóstico técnico de áudio com inteligência artificial.">
     <link rel="stylesheet" href="legal.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
