--- a/public/test-ai-merge.html
+++ b/public/test-ai-merge.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Merge Seguro AI Suggestions</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
 </head>
 <body>
     <h1>🔄 Teste - Merge Seguro de Sugestões IA</h1>
