--- a/public/test-true-peak-gate.html
+++ b/public/test-true-peak-gate.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🧪 Teste HARD GATES - Score Engine V3.1</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
   <style>
     :root {
       --bg: #0a0a0a;
