--- a/public/teste-correcao-modal.html
+++ b/public/teste-correcao-modal.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🧪 TESTE: Correção do Bug do Modal</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <link rel="stylesheet" href="upgrade-modal-styles.css">
     <style>
         body {
