--- a/public/cache-diagnostic.html
+++ b/public/cache-diagnostic.html
@@ -6,6 +6,10 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>DIAGNÓSTICO CACHE - PROD.AI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         body { 
             font-family: monospace; 
