--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documento Técnico - SoundyAI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     
     <!-- CSS EXTERNO ÚNICO - SEM INLINE STYLES PROBLEMÁTICOS -->
     <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260105-list-fix">
