--- a/public/plano.html
+++ b/public/plano.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plano de Correção - SoundyAI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
