--- a/public/prelaunch.html
+++ b/public/prelaunch.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoundyAI - Algo Grande Está Chegando</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <meta name="description" content="A revolução na produção musical está chegando. Entre na lista de espera e seja o primeiro a experimentar.">
     
     <!-- Open Graph / Social -->
