--- a/public/test-ai-suggestions-system.html
+++ b/public/test-ai-suggestions-system.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🚀 Teste - Sistema de Sugestões IA Avançado</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         * {
             margin: 0;
