--- a/public/test-complete-merge-ui-fix.html
+++ b/public/test-complete-merge-ui-fix.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Correção Completa Merge + UI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
 </head>
 <body>
     <h1>🧪 Teste - Correção Completa: Merge + UI</h1>
