--- a/public/test-documento-tecnico-local.html
+++ b/public/test-documento-tecnico-local.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste Rápido - Documento Técnico</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         body {
             font-family: Arial, sans-serif;
