--- a/public/test-fase1.html
+++ b/public/test-fase1.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🧪 Teste Fase 1 - Sistema runId Global | PROD.AI</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     
     <!-- Estilos básicos -->
     <link rel="stylesheet" href="style.css?v=20250810">
