--- a/public/test-loop-fix.html
+++ b/public/test-loop-fix.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Loop Infinito READY-CHECK Resolvido</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
 </head>
 <body>
     <h1>🔄 Teste - Correção Loop Infinito READY-CHECK</h1>
