--- a/public/test-merge-advanced.html
+++ b/public/test-merge-advanced.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Merge Avançado True Peak</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
 </head>
 <body>
     <h1>⚡ Teste - Merge Avançado com Busca em Múltiplos Campos</h1>
