--- a/public/test-message-restoration.html
+++ b/public/test-message-restoration.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Restauração Mensagens IA</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
 </head>
 <body>
     <h1>🔧 Teste - Restauração das Mensagens da IA</h1>
