--- a/public/test-metadata-content-layers.html
+++ b/public/test-metadata-content-layers.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Busca em metadata.content</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
 </head>
 <body>
     <h1>🧪 Teste - Busca em metadata.content.original/enriched</h1>
