--- a/public/test-metadata-search.html
+++ b/public/test-metadata-search.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste - Busca em Metadata True Peak</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
 </head>
 <body>
     <h1>🔍 Teste - Busca em Metadata para True Peak</h1>
