--- a/public/test-modal-ajustado.html
+++ b/public/test-modal-ajustado.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste Modal Ajustado - Tamanho e Título</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <link rel="stylesheet" href="audio-analyzer.css">
     <style>
         body {
