--- a/public/test-nova-paleta.html
+++ b/public/test-nova-paleta.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🟣 Teste Nova Paleta - Roxo Escuro + Azul Ciano</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <link rel="stylesheet" href="audio-analyzer.css">
     <script src="audio-analyzer-integration.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
