--- a/public/test-truepeak-production.html
+++ b/public/test-truepeak-production.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste True Peak Pipeline</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         body {
             font-family: 'Courier New', monospace;
