--- a/public/teste-plano-plus.html
+++ b/public/teste-plano-plus.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🧪 TESTE: Sistema de Plano Plus</title>
+    <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
+    <script src="logger.js"></script>
+    
+
     <style>
         * {
             margin: 0;
