--- a/public/landing.html
+++ b/public/landing.html
@@ -1823,7 +1823,7 @@
                 
                 <div class="custom-audio-player">
                     <audio controls preload="metadata">
-                        <source src="assets/audio/SOUNDYAI ANTES.wav" type="audio/wav">
+                        <source src="/assets/audio/SOUNDYAI_ANTES.wav" type="audio/wav">
                         Seu navegador não suporta o elemento de áudio.
                     </audio>
                     <div class="audio-info">
@@ -1857,7 +1857,7 @@
                 
                 <div class="custom-audio-player">
                     <audio controls preload="metadata">
-                        <source src="assets/audio/SOUNDYAI DEPOIS.wav" type="audio/wav">
+                        <source src="/assets/audio/SOUNDYAI_DEPOIS.wav" type="audio/wav">
                         Seu navegador não suporta o elemento de áudio.
                     </audio>
                     <div class="audio-info">
