--- a/public/landing.html
+++ b/public/landing.html
@@ -865,7 +865,7 @@
         .custom-audio-player {
             width: 100%;
             position: relative;
-            z-index: 1;
+            z-index: 20;
             background: rgba(0, 0, 0, 0.5);
             border-radius: 15px;
             padding: 25px;
@@ -875,6 +875,8 @@
         .custom-audio-player audio {
             width: 100%;
             height: 45px;
+            position: relative;
+            z-index: 20;
             filter: 
                 brightness(1.2)
                 contrast(1.1)
