--- a/public/landing.html
+++ b/public/landing.html
@@ -796,7 +796,7 @@
             gap: 8px;
             margin-bottom: 25px;
             position: relative;
-            z-index: 1;
+            z-index: 10;
             border-bottom: 2px solid rgba(255,255,255,0.1);
             padding-bottom: 20px;
         }
@@ -865,7 +865,7 @@
         .custom-audio-player {
             width: 100%;
             position: relative;
-            z-index: 20;
+            z-index: 100;
             background: rgba(0, 0, 0, 0.5);
             border-radius: 15px;
             padding: 25px;
@@ -874,22 +874,9 @@
 
         .custom-audio-player audio {
             width: 100%;
-            height: 45px;
-            position: relative;
-            z-index: 20;
-            filter: 
-                brightness(1.2)
-                contrast(1.1)
-                saturate(1.3);
-        }
-
-        /* Estilização dos controles nativos do audio */
-        .custom-audio-player audio::-webkit-media-controls-panel {
-            background: linear-gradient(to right, rgba(255, 51, 102, 0.1), rgba(0, 0, 0, 0.8));
-        }
-
-        .after .custom-audio-player audio::-webkit-media-controls-panel {
-            background: linear-gradient(to right, rgba(0, 243, 255, 0.1), rgba(0, 0, 0, 0.8));
+            min-height: 54px;
+            display: block;
+            outline: none;
         }
 
         .audio-info {
@@ -932,8 +919,9 @@
             gap: 3px;
             opacity: 0.6;
             position: relative;
-            z-index: 1;
+            z-index: 5;
             padding: 0 10px;
+            pointer-events: none;
         }
 
         .wave-bar {
