--- a/public/test-audio.html
+++ b/public/test-audio.html
@@ -49,26 +49,26 @@
     <h1>🎵 Teste de Players de Áudio</h1>
     
     <div class="player-container">
-        <h2>Player 1: SOUNDYAI_ANTES.wav</h2>
-        <audio id="audio1" controls preload="metadata">
-            <source src="/assets/audio/SOUNDYAI_ANTES.wav" type="audio/wav">
+        <h2>Player 1: soundyai-antes.wav</h2>
+        <audio controls preload="metadata">
+            <source src="/assets/audio/soundyai-antes.wav" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
         </audio>
         <div class="info">
-            <strong>Caminho:</strong> /assets/audio/SOUNDYAI_ANTES.wav<br>
+            <strong>Caminho:</strong> /assets/audio/soundyai-antes.wav<br>
             <strong>Tipo:</strong> audio/wav
             <div id="status1" class="status">Carregando...</div>
         </div>
     </div>
 
     <div class="player-container">
-        <h2>Player 2: SOUNDYAI_DEPOIS.wav</h2>
-        <audio id="audio2" controls preload="metadata">
-            <source src="/assets/audio/SOUNDYAI_DEPOIS.wav" type="audio/wav">
+        <h2>Player 2: soundyai-depois.wav</h2>
+        <audio controls preload="metadata">
+            <source src="/assets/audio/soundyai-depois.wav" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
         </audio>
         <div class="info">
-            <strong>Caminho:</strong> /assets/audio/SOUNDYAI_DEPOIS.wav<br>
+            <strong>Caminho:</strong> /assets/audio/soundyai-depois.wav<br>
             <strong>Tipo:</strong> audio/wav
             <div id="status2" class="status">Carregando...</div>
         </div>
@@ -77,11 +77,11 @@
     <div class="player-container">
         <h2>Player 3: Teste com caminho absoluto</h2>
         <audio id="audio3" controls preload="metadata">
-            <source src="./assets/audio/SOUNDYAI_ANTES.wav" type="audio/wav">
+            <source src="./assets/audio/soundyai-antes.wav" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
         </audio>
         <div class="info">
-            <strong>Caminho:</strong> ./assets/audio/SOUNDYAI_ANTES.wav<br>
+            <strong>Caminho:</strong> ./assets/audio/soundyai-antes.wav<br>
             <strong>Tipo:</strong> audio/wav
             <div id="status3" class="status">Carregando...</div>
         </div>
@@ -90,11 +90,11 @@
     <div class="player-container">
         <h2>Player 4: Teste com caminho assets direto</h2>
         <audio id="audio4" controls preload="metadata">
-            <source src="assets/audio/SOUNDYAI_DEPOIS.wav" type="audio/wav">
+            <source src="assets/audio/soundyai-depois.wav" type="audio/wav">
             Seu navegador não suporta o elemento de áudio.
         </audio>
         <div class="info">
-            <strong>Caminho:</strong> assets/audio/SOUNDYAI_DEPOIS.wav<br>
+            <strong>Caminho:</strong> assets/audio/soundyai-depois.wav<br>
             <strong>Tipo:</strong> audio/wav
             <div id="status4" class="status">Carregando...</div>
         </div>
