--- a/public/planos.html
+++ b/public/planos.html
@@ -8,7 +8,7 @@
     <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
     <script src="logger.js"></script>
     
-    <!-- 📊 Google Ads Tracking -->
+    <!-- 📊 Google Ads Conversion Tracking -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17884386312"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
