--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- 🌐 API URL Resolver - DEVE SER CARREGADO ANTES DE TUDO -->
     <script src="api-url-resolver.js?v=20260121"></script>
     
-    <!-- 📊 Google Ads Tracking -->
+    <!-- 📊 Google Ads Conversion Tracking -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17884386312"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
