--- a/public/partner-dashboard.html
+++ b/public/partner-dashboard.html
@@ -284,13 +284,13 @@
 
         // ✅ Firebase config
         const firebaseConfig = {
-            apiKey: "AIzaSyA-oHlXfFCUCkV0TgR8Dq2Hh-yZYeXOiIg",
-            authDomain: "soundy-ai.firebaseapp.com",
-            projectId: "soundy-ai",
-            storageBucket: "soundy-ai.firebasestorage.app",
-            messagingSenderId: "846015668746",
-            appId: "1:846015668746:web:8ff5d15ea4a1a7e05a1834",
-            measurementId: "G-3RNHPWT2JR"
+            apiKey: "AIzaSyBKby0RdIOGorhrfBRMCWnL25peU3epGTw",
+            authDomain: "prodai-58436.firebaseapp.com",
+            projectId: "prodai-58436",
+            storageBucket: "prodai-58436.appspot.com",
+            messagingSenderId: "801631191322",
+            appId: "1:801631322:web:80e3d29cf7468331652ca3",
+            measurementId: "G-MBDHDYN6Z0"
         };
 
         const app = initializeApp(firebaseConfig);
