--- a/public/partner-dashboard.html
+++ b/public/partner-dashboard.html
@@ -433,7 +433,7 @@
                     <div class="referral-link">
                         <h3>🔗 Seu Link de Indicação</h3>
                         <div class="link-container">
-                            <input type="text" class="link-input" id="referralLink" value="https://https://soundyai-app-soundyai-teste.up.railway.app/?ref=${partnerId}" readonly>
+                            <input type="text" class="link-input" id="referralLink" value="https://soundyai-app-soundyai-teste.up.railway.app/?ref=${partnerId}" readonly>
                             <button class="copy-button" onclick="copyLink()">Copiar</button>
                         </div>
                     </div>
