--- a/public/login.html
+++ b/public/login.html
@@ -363,6 +363,8 @@
       margin: 24px 0;
       display: flex;
       justify-content: center;
+      align-items: center;
+      min-height: 78px; /* Altura padrão do reCAPTCHA normal */
     }
     
     /* Responsivo */
