--- a/public/landing.html
+++ b/public/landing.html
@@ -7,7 +7,8 @@
     <!-- ✅ CRITICAL: Logger DEVE ser o primeiro script carregado -->
     <script src="logger.js"></script>
     
-
+    <!-- 🔗 SISTEMA DE AFILIADOS V3: Rastreamento centralizado -->
+    <script src="referral-core.js"></script>
     
     <!-- Bibliotecas para efeitos visuais -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" defer></script>
