--- a/public/landing.html
+++ b/public/landing.html
@@ -1632,8 +1632,8 @@
         <div class="sound-wave-bg"></div>
         <div class="hero-container">
             <div class="hero-content">
-                <h1>ANALISE SUA MÚSICA EM 1 MINUTO    <br><span>SAIBA O QUE CORRIGIR E COMO</span></h1>
-                <p>SoundyAI revela todos erros invisíveis da sua faixa e todos problemas que seus ouvidos e seus fones deixam passar.</p>
+                <h1>ANALISE SUA MÚSICA COM IA    <br><span>DESCUBRA ERROS INVISÍVEIS NA SUA MIX E MASTER</span></h1>
+                <p>SoundyAI revela erros técnicos invisíveis da sua faixa e problemas que seus ouvidos e seus fones deixam passar.</p>
                 
                 <div class="hero-ctas">
                     <a href="index.html" class="btn-primary">Analisar minha música grátis</a>
@@ -1721,17 +1721,17 @@
                     <tr>
                         <td>Contexto de Gênero</td>
                         <td><span class="cross">✖</span> Padrão Único <span class="feature-desc">Trata Jazz igual a Dubstep</span></td>
-                        <td><span class="check">✔</span> Multi-Genre Target <span class="feature-desc">Comparação com hits do Top 100 do seu estilo</span></td>
+                        <td><span class="check">✔</span> Multi-Genre Target <span class="feature-desc">Comparação com referências reais do seu gênero</span></td>
                     </tr>
                     <tr>
                         <td>Precisão de Análise</td>
                         <td><span class="cross">✖</span> Algoritmo Linear <span class="feature-desc">Baseado apenas em matemática simples</span></td>
-                        <td><span class="check">✔</span> Deep Learning <span class="feature-desc">Treinado com +10.000 faixas premiadas</span></td>
+                        <td><span class="check">✔</span> Deep Learning <span class="feature-desc">IA treinada com princípios de Engenharia de Áudio e algoritmos de análise acústica</span></td>
                     </tr>
                     <tr>
                         <td>Feedback Visual</td>
                         <td><span class="cross">✖</span> Estático <span class="feature-desc">Apenas números frios</span></td>
-                        <td><span class="check">✔</span> Imersivo 8D <span class="feature-desc">Visualização intuitiva do campo estéreo</span></td>
+                        <td><span class="check">✔</span> Imersivo 8D <span class="feature-desc">Visualização intuitiva</span></td>
                     </tr>
                 </tbody>
             </table>
@@ -1914,7 +1914,7 @@
                 <div class="step-number">2</div>
                 <div class="step-icon">🤖</div>
                 <h3>A IA Analisa</h3>
-                <p>Nossos algoritmos comparam sua faixa com milhares de hits do mesmo gênero.</p>
+                <p>Nossos algoritmos analisam tecnicamente com base na Engenharia de Áudio.</p>
             </div>
             <div class="step-card">
                 <div class="step-number">3</div>
@@ -1926,7 +1926,7 @@
                 <div class="step-number">4</div>
                 <div class="step-icon">🎛️</div>
                 <h3>Aplique Correções</h3>
-                <p>Siga as instruções em dB e Hz para polir sua mix em minutos.</p>
+                <p>Siga as instruções em dB e Hz para polir sua faixa em minutos.</p>
             </div>
         </div>
     </section>
@@ -1955,7 +1955,7 @@
                 <div class="del-icon">🌊</div>
                 <div class="del-content">
                     <h3>Análise Espectral</h3>
-                    <p>Visualização clara do equilíbrio de frequências da sua faixa.</p>
+                    <p>Visualização do equilíbrio de frequências da sua faixa.</p>
                 </div>
             </div>
             <div class="deliverable-card">
