fix(freq): range-only subscore logs + cache-bust index script

--- a/public/index.html
+++ b/public/index.html
@@ -1114,7 +1114,7 @@
     <!-- 🎯 ERROR MAPPER - Sistema centralizado de mensagens de erro amigáveis -->
     <script src="/error-mapper.js?v=1.0.0"></script>
     
-    <script src="/audio-analyzer-integration.js?v=NO_CACHE_FORCE&ts=20251228" defer></script>
+    <script src="/audio-analyzer-integration.js?v=20260130_1" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
     <script>
