--- a/public/login.html
+++ b/public/login.html
@@ -517,7 +517,7 @@
   
   <div class="container">
     <h1 class="logo">SoundyAI</h1>
-    <p class="subtitle">Acesse sua conta</p>
+    <p class="subtitle">Acesse sua conta e analise suas músicas </p>
 
     <!-- ═══════════════════════════════════════════════════════════════════ -->
     <!-- 🔵 BOTÃO GOOGLE - Login com 1 clique -->
