--- a/public/landing.html
+++ b/public/landing.html
@@ -1691,7 +1691,7 @@
         <p class="section-subtitle">Soar bem no seu quarto e no fone não significa que sua música esteja pronta para o mundo. O Spotify, o carro e o sistema de som do evento vão revelar os problemas que você não ouviu.</p>
 
         <div class="revela-wrap">
-            <h3 class="revela-title">O QUE A SOUNDYAI TE REVELA</h3>
+            <h3 class="revela-title">O QUE A SOUNDYAI TE REVELA:</h3>
         </div>
 
         <div class="problem-grid">
@@ -1703,17 +1703,17 @@
             <div class="problem-card">
                 <div class="problem-icon">⚠️</div>
                 <h3>Clipping Invisível</h3>
-                <p>Mesmo que sua música não pareça estourada no fone, picos de True Peak acima do ideal fazem o áudio distorcer quando vai pro streaming ou toca em sistemas grandes. É por isso que muitas músicas soam “distorcidas”, sem impacto em caixas de som potentes, mesmo parecendo normais no quarto.</p>
+                <p>Mesmo que sua música não pareça estourada no fone, picos de True Peak acima do ideal fazem o áudio distorcer quando vai pro streaming ou toca em sistemas grandes. É por isso que muitas músicas soam “distorcidas”.</p>
             </div>
             <div class="problem-card">
                 <div class="problem-icon">📉</div>
                 <h3>Grave Descontrolado</h3>
-                <p>O excesso de sub-grave (abaixo de 40Hz) come seu headroom e faz sua mix soar pequena e fraca, sem você perceber.</p>
+                <p>O excesso de sub-grave (abaixo de 40Hz) come seu headroom e faz sua mix soar pequena e fraca, sem você perceber. Ele faz o limiter esmagar tudo e deixa sua mix fraca e embolada.</p>
             </div>
             <div class="problem-card">
                 <div class="problem-icon">⚖️</div>
                 <h3>Balanço Tonal</h3>
-                <p>Sua mix tem muito médio? Pouco brilho? Sem uma referência visual objetiva, seus ouvidos viciados te enganam.</p>
+                <p>Quando algumas frequências sobram e outras faltam, sua música perde impacto e clareza sem você perceber. Descubra com a SoundyAI se suas frequências estão desbalanceadas e por que sua música não bate forte nas caixas grandes.</p>
             </div>
         </div>
     </section>
@@ -1722,7 +1722,7 @@
     <div class="frequency-separator"></div>
     <section id="comparison" class="section">
         <h2 class="section-title">POR QUE O SOUNDYAI É DIFERENTE</h2>
-        <p class="section-subtitle">Não somos apenas mais um analisador de espectro. Somos um engenheiro virtual.</p>
+        <p class="section-subtitle">Não somos apenas mais uma "ferramenta genérica". Somos seu engenheiro de áudio virtual. Analisamos sua faixa e te direcionamos passo a passo como ajustar. Com nossos recursos de IA, você corrige sua faixa e aprende Engenharia de áudio ao mesmo tempo!</p>
         
         <div class="comparison-container">
             <!-- Tabela Desktop (oculta no mobile) -->
