--- a/public/landing.html
+++ b/public/landing.html
@@ -1665,7 +1665,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>ANALISE SUA MÚSICA COM IA    <br><span>DESCUBRA ERROS INVISÍVEIS NA SUA MIX E MASTER</span></h1>
-                <p>Já produz mas não manda bem na parte de Mix e Master? A SoundyAI revela problemas que seus ouvidos e seus fones deixam passar e te ajuda a corrigi-los sem precisar saber Engenharia de Áudio.</p>
+                <p>Já produz mas não manda bem na parte de Mix e Master? A SoundyAI revela problemas que seus ouvidos e seus fones deixam passar e te ajuda a corrigi-los sem precisar saber Engenharia de Áudio. Entre e tenha acesso à um Chat Bot e Analisador de áudio avançado.</p>
                 
                 <div class="hero-ctas">
                     <a href="index.html" class="btn-primary">Analisar minha música grátis</a>
