--- a/public/index.html
+++ b/public/index.html
@@ -1550,6 +1550,9 @@
     <!-- 🎯 FIRST ANALYSIS CTA: CTA de upgrade na primeira análise FREE -->
     <script src="first-analysis-upgrade-cta.js?v=20260203" defer></script>
     
+    <!-- 🔍 DEBUG: Função para depurar estado do CTA V5 -->
+    <script src="debug-first-cta-state.js?v=20260203" defer></script>
+    
     <!-- 🔒 MODAL DE UPGRADE - Bloqueio de Funcionalidades Premium -->
     <div id="upgradeModal" role="dialog" aria-modal="true" aria-labelledby="upgradeModalTitle">
         <div class="upgrade-modal-card">
