--- a/public/index.html
+++ b/public/index.html
@@ -1540,7 +1540,7 @@
     <script src="premium-blocker.js?v=20251213" defer></script>
     
     <!-- 🎯 FIRST ANALYSIS CTA: CTA de upgrade na primeira análise FREE -->
-    <script src="first-analysis-upgrade-cta.js?v=20260203-timing-fix" defer></script>
+    <script src="first-analysis-upgrade-cta.js?v=20260203-lazy-ready" defer></script>
     
     <!-- 🔍 DEBUG: Função para depurar estado do CTA V5 -->
     <script src="debug-first-cta-state.js?v=20260203" defer></script>
