--- a/backup-pre-logger/planos.html
+++ b/backup-pre-logger/planos.html
@@ -127,6 +127,12 @@
                         </span>
                         <span class="feature-text disabled">Sem relatório em PDF</span>
                     </div>
+                    <div class="feature-item">
+                        <span class="feature-icon cross">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+                        </span>
+                        <span class="feature-text disabled">Sem histórico de análises</span>
+                    </div>
                 </div>
                 
                 <div class="card-cta">
@@ -195,6 +201,12 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
                         </span>
                         <span class="feature-text disabled">Sem relatório em PDF</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon cross">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+                        </span>
+                        <span class="feature-text disabled">Sem histórico de análises</span>
                     </div>
                 </div>
                 
